--- a/application/modules/default/views/layouts/layout.phtml
+++ b/application/modules/default/views/layouts/layout.phtml
@@ -8,7 +8,36 @@
         <?php echo $this->bundleLink() ?>
     </head>
     <body>
-
+        <nav class="navbar navbar-default navigation-custom" role="navigation">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/"><?php echo $this->applicationName; ?></a>
+                </div>
+           
+                <?php if ($this->userEmail) : ?>
+                    <ul class="nav navbar-nav">
+                        <li><a href="/default/index/download">Download MP3</a></li>
+                        <li><a href="/default/index/download-list">My downloads</a></li>
+                    </ul>
+                    <p class="navbar-text navbar-center">
+                        <a href="#" class="navbar-link"><?php echo $this->userEmail ?></a>
+                    </p>
+                <?php endif; ?>
+                
+                <ul class="nav navbar-nav navbar-right">
+                    <?php if ($this->userEmail) : ?>
+                        <li><a href="/default/authentication/signout">Sign out</a></li>
+                    <?php else : ?>
+                        <li><a href="/default/authentication/login-form">Log in</a></li>
+                        <li class="dropdown">
+                            <a href="/default/authentication/signup-form">Sign up</a>
+                        </li>
+                    <?php endif; ?>
+                </ul>
+            </div><!-- /.container-fluid -->
+          </nav>
+        
         <?php echo $this->layout()->content ?>
 
         <?php echo $this->bundleScript() ?>
