--- a/trunk/public/css/custom/layout.css
+++ b/trunk/public/css/custom/layout.css
@@ -4,3 +4,15 @@
 .navbar-center {
     margin-left: 200px;
 }
+.distance-separator {
+    height: 20px;
+}
+.login-div {
+    margin: auto;
+    padding-top: 100px;
+    width: 300px;
+}
+.login-user {
+    font-size: 90px;
+    text-align: center;
+}
