--- a/trunk/application/modules/default/views/layouts/layout.phtml
+++ b/trunk/application/modules/default/views/layouts/layout.phtml
@@ -17,7 +17,7 @@
            
                 <?php if ($this->userEmail) : ?>
                     <ul class="nav navbar-nav">
-                        <li><a href="/default/index/download">Download MP3</a></li>
+                        <li><a href="/default/index/download-request">Download MP3</a></li>
                         <li><a href="/default/index/download-list">My downloads</a></li>
                     </ul>
                     <p class="navbar-text navbar-center">
@@ -31,13 +31,13 @@
                     <?php else : ?>
                         <li><a href="/default/authentication/login">Log in</a></li>
                         <li class="dropdown">
-                            <a href="/default/authentication/signup-form">Sign up</a>
+                            <a href="/default/authentication/signup">Sign up</a>
                         </li>
                     <?php endif; ?>
                 </ul>
             </div><!-- /.container-fluid -->
           </nav>
-        
+        <?php echo $this->displayFlashMessages($this->layout()->flashMessage, $this->layout()->flashMessageType);?>
         <?php echo $this->layout()->content ?>
 
         <?php echo $this->bundleScript() ?>
