added the remaining file to finish the project

--- a/application/modules/default/views/scripts/index/download-list.phtml
+++ b/application/modules/default/views/scripts/index/download-list.phtml
@@ -50,7 +50,8 @@
                             <?php break;
                             case Service_Multimedia::DOWNLOAD_STATUS_SUCCESS: ?>
                                 <div class="download-button">
-                                    <a href="<?php echo $downloadLinkDetails['download_link'] ?>">
+                                    <a href="https://licenta.blob.core.windows.net/uploads/<?php echo $downloadLinkDetails['download_link'] ?>" 
+                                       target="_blank">
                                         <span class="glyphicon glyphicon-download-alt">
                                         </span>
                                     </a>
